Init language selector

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,1 +1,12 @@
-{}
+{
+  "ThemeSelection": {
+    "label": "Theme",
+    "ThemeNames": {
+      "dark": "Dark",
+      "light": "Light"
+    }
+  },
+  "LanguageSelection": {
+    "label": "Language"
+  }
+}
