--- a/frontend/public/locales/fi/translation.json
+++ b/frontend/public/locales/fi/translation.json
@@ -1,1 +1,12 @@
-{}
+{
+  "ThemeSelection": {
+    "label": "Teema",
+    "ThemeNames": {
+      "dark": "Tumma",
+      "light": "Vaalea"
+    }
+  },
+  "LanguageSelection": {
+    "label": "Kieli"
+  }
+}
