--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -8,5 +8,9 @@
   },
   "LanguageSelection": {
     "label": "Language"
+  },
+  "NavigationLinks": {
+    "home": "Home",
+    "settings": "Settings"
   }
 }
