--- a/frontend/public/locales/fi/translation.json
+++ b/frontend/public/locales/fi/translation.json
@@ -8,5 +8,9 @@
   },
   "LanguageSelection": {
     "label": "Kieli"
+  },
+  "NavigationLinks": {
+    "home": "Koti",
+    "settings": "Asetukset"
   }
 }
