Settings view looking good

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,4 +1,9 @@
 {
+  "SettingsView": {
+    "Autosave": {
+      "label": "Using autosave"
+    }
+  },
   "ThemeSelection": {
     "label": "Theme",
     "ThemeNames": {
