--- a/frontend/public/locales/fi/translation.json
+++ b/frontend/public/locales/fi/translation.json
@@ -1,4 +1,9 @@
 {
+  "SettingsView": {
+    "Autosave": {
+      "label": "Automaattinen tallennus"
+    }
+  },
   "ThemeSelection": {
     "label": "Teema",
     "ThemeNames": {
