Add title and description to settings view

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,5 +1,7 @@
 {
   "SettingsView": {
+    "title": "Settings",
+    "description": "These settings are customisable for you to ensure the best user experience.",
     "Autosave": {
       "label": "Using autosave"
     }
