--- a/frontend/public/locales/fi/translation.json
+++ b/frontend/public/locales/fi/translation.json
@@ -74,6 +74,7 @@
   "NavigationLinks": {
     "home": "Koti",
     "settings": "Asetukset",
-    "login": "Kirjaudu"
+    "login": "Kirjaudu",
+    "logout": "Ulos"
   }
 }
