--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -74,6 +74,7 @@
   "NavigationLinks": {
     "home": "Home",
     "settings": "Settings",
-    "login": "Login"
+    "login": "Login",
+    "logout": "Logout"
   }
 }
