Better navigation structure

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -76,5 +76,10 @@
     "settings": "Settings",
     "login": "Login",
     "logout": "Logout"
+  },
+  "OpenNavigation": {
+    "SettingDrop": {
+      "tooltip": "User Settings"
+    }
   }
 }
