--- a/frontend/public/locales/fi/translation.json
+++ b/frontend/public/locales/fi/translation.json
@@ -76,5 +76,10 @@
     "settings": "Asetukset",
     "login": "Kirjaudu",
     "logout": "Ulos"
+  },
+  "OpenNavigation": {
+    "SettingDrop": {
+      "tooltip": "Käyttäjäasetukset"
+    }
   }
 }
