Funside navigation link

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -75,7 +75,9 @@
     "home": "Home",
     "settings": "Settings",
     "login": "Login",
-    "logout": "Logout"
+    "logout": "Logout",
+    "funSide": "Funside",
+    "portfolioSide": "Portfolio"
   },
   "OpenNavigation": {
     "SettingDrop": {
