--- a/frontend/public/locales/fi/translation.json
+++ b/frontend/public/locales/fi/translation.json
@@ -14,6 +14,10 @@
     "settings": "Asetukset",
     "projectlist": "Projektit"
   },
+  "ContactView": {
+    "title": "Yhteystiedot",
+    "description": "Voit käyttää vapaasti mitä vain alla olevista."
+  },
   "SettingsView": {
     "title": "Asetukset",
     "description": "Sinun on mahdollista muuttaa asetuksiasi, jotta saat parhaan mahdollisen käyttäjäkokemuksen.",
